# P1

./: .gitignore  CMakeLists.txt  STATE  filestructure_test  filestructure_test.md
src/: CMakeLists.txt  controller.c  controller.h  file.c  file.h  gui.c  gui.h  input.c  input.h  main.c  menu.c  menu.h  patient.c  patient.h  patient_queue.c  patient_queue.h  project1.c  symptoms.c  symptoms.h  triage_level.c  triage_level.h  vitals.c  vitals.h
src/pdcurses/: CMakeLists.txt
src/symptoms/: 001_abstinence.c  001_abstinence.h  002_allergic_symptoms.c  002_allergic_symptoms.h  003.c  004.c  005.c  006.c  007.c  008.c  010.c  010_chest_pains.c  011.c  012.c  013.c  014.c  015.c  016.c  017.c  018.c  018_contaminant.c  019.c  019_gastrointestinal.c  019_gastrointestinal.h  020.c  021.c  022.c  023.c  023_Arrhythmias.h  024.c  025.c  025_headache.c  025_headache.h  026.c  026_skin_and_mucous_membrane_symptoms.c  026_skin_and_mucous_membrane_symptoms.h  027.c  027_jaundice_and_or_ascites.c  028.c  028_catheter_stoma_or_feeding_tube_problems.c  (+60 more)
src/view/: CMakeLists.txt  abstinence_gui.c  abstinence_gui.h  gui.c  gui.h  patient_queue_gui.c  patient_queue_gui.h  symptoms_gui.c  symptoms_gui.h  vitals_gui.c  vitals_gui.h
test/: test_calculator.c
